# netbox-cmdb-lite

./: LICENSE  README.md  pyproject.toml  setup.py
netbox_cmdb_lite/: __init__.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_cmdb_lite/api/: __init__.py  serializers.py  urls.py  views.py
netbox_cmdb_lite/migrations/: 0001_initial.py  0002_genericobject_deacription_and_more.py  0003_category_genericobjecttype_category.py  0004_rename_deacription_genericobject_description_and_more.py  0005_genericobjecttype_relationships.py
netbox_cmdb_lite/templates/netbox-cmdb-lite/generic_objects/: generic_object_edit.html
netbox_cmdb_lite/templates/netbox_cmdb_lite/: generic_object_type_edit.html  generic_object_types_edit.html  genericobject.html  genericobject_edit.html  genericobjecttype.html  genericobjecttype_edit.html  genericobjectype.html
netbox_cmdb_lite/templates/netbox_cmdb_lite/generic_objects/: generic_object_list.html
netbox_cmdb_lite/templates/netbox_cmdb_lite/object_types/: object_type_list.html
netbox_cmdb_lite/templates/netbox_cmdb_lite/relationships/: generic_relatipnship_list.html  relationship_type_list.html
